--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -6,11 +6,11 @@
 
 body {
     font-family: 'Nunito', sans-serif;
+    background-color: rgb(232, 228, 228);
 }
 
 
 
-/* From Uiverse.io by GeorgeAdvertising */
 .section-banner {
     height: 300px;
     width: 10/12;
@@ -22,9 +22,9 @@ body {
     bottom: 0px;
     border-radius: 40px;
     animation: earthRotate 30s linear 0s infinite;
-    box-shadow: 50px 50px 200px RGBA(255, 255, 255, 0.2), -5px 0px 8px #0f06b899 inset,
-        15px 2px 25px #0f06b899 inset, 50px -2px 34px #0f06b899 inset,
-        50px 60px 60px #0f06b899 inset, 150px 50px 60px #0f06b899 inset;
+    /* box-shadow: 50px 50px 200px RGBA(255, 255, 255, 0.2), -5px 0px 8px #ffffff inset,
+        15px 2px 25px #ffffff inset, 50px -2px 34px #ffffff inset,
+        50px 60px 60px #ffffff inset, 150px 50px 60px #ffffff inset; */
 }
 
 #paginate {
@@ -39,5 +39,288 @@ body {
 
     100% {
         background-position: 400px 0;
+    }
+}
+
+#navbar {
+    background-color: #ffffff;
+
+}
+
+.card {
+    --bg: #f0f0f0;
+    --contrast: #ffffff;
+    --grey: #878383;
+    position: relative;
+    padding: 9px;
+    background-color: var(--bg);
+    border-radius: 35px;
+
+}
+
+
+
+.card-inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    width: 390px;
+    height: 454px;
+    background-color: var(--contrast);
+    border-radius: 30px;
+    font-size: 30px;
+    font-weight: 900;
+    color: #c7c4c4;
+    text-align: center;
+    font-family: monospace;
+}
+
+.card1 {
+    --bg-card: #ffffff;
+    ;
+    --primary: #0022ff;
+    --primary-800: #ffffff;
+    --primary-shadow: #0022ff;
+    --light: #d9d9d9;
+    --zinc-800: #18181b;
+    --bg-linear: linear-gradient(0deg, var(--primary) 50%, var(--light) 125%);
+
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+
+    padding: 1rem;
+    width: 300px;
+    height: 400px;
+    background-color: var(--bg-card);
+
+    border-radius: 1rem;
+}
+
+.image_container {
+    overflow: hidden;
+
+
+    position: absolute;
+    z-index: 5;
+
+    width: 270px;
+    height: 200px;
+    background-color: var(--primary-800);
+
+    border-radius: 0.5rem;
+}
+
+.image_container .image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 3rem;
+    fill: var(--light);
+}
+
+.title {
+    overflow: clip;
+
+    width: 100%;
+    margin-top: 270px;
+    font-size: 20px;
+    font-weight: 600;
+    color: black;
+    text-transform: capitalize;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
+}
+
+.size {
+    font-size: 0.75rem;
+    color: white;
+}
+
+.list-size {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+
+    margin-top: 0.25rem;
+}
+
+.list-size .item-list {
+    list-style: none;
+}
+
+.list-size .item-list-button {
+    cursor: pointer;
+
+    padding: 0.5rem;
+    background-color: var(--zinc-800);
+
+    font-size: 0.75rem;
+    color: var(--light);
+
+    border: 2px solid var(--zinc-800);
+    border-radius: 0.25rem;
+
+    transition: all 0.3s ease-in-out;
+}
+
+.item-list-button:hover {
+    border: 2px solid var(--light);
+}
+
+.item-list-button:focus {
+    background-color: var(--primary);
+
+    border: 2px solid var(--primary-shadow);
+
+    box-shadow: inset 0px 1px 4px var(--primary-shadow);
+}
+
+.action {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.price {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: black;
+}
+
+.cart-button {
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.25rem;
+
+    padding: 0.5rem;
+    width: 100%;
+    background-color: rgb(20, 63, 255);
+    font-size: 0.75rem;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+    text-wrap: nowrap;
+
+
+    border-radius: 0.5rem;
+
+
+
+}
+
+.cart-button:hover {
+    background-color: rgb(66, 101, 254);
+}
+
+.cart-button .cart-icon {
+    width: 1rem;
+}
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    /* Yüksekliği tam ekran yapar */
+    background-color: #f0f0f0;
+    /* Arka plan rengi */
+}
+
+.loading-text {
+    font-size: 24px;
+    color: #333;
+    animation: loading 1.5s infinite;
+    /* Yüklenme animasyonu */
+}
+
+@keyframes loading {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+#right {
+    animation: slideInFromRight 1s ease forwards;
+}
+
+#left {
+    animation: slideInFromLeft 1s ease forwards;
+}
+
+#top {
+    background-color: #ffffff;
+    animation: slideInFromUp 2.5s ease forwards;
+}
+
+#bottom {
+    animation: slideInFromDown 2s ease-out;
+
+}
+
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-300px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInFromUp {
+    0% {
+        transform: translateY(-300px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInFromDown {
+    0% {
+        transform: translateY(300px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(300px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
     }
 }
